# pydftracer

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-publish.yml
dftracer/: __init__.py  dynamo.py
dftracer/dbg/logger/: __init__.py  ai.py  logger.py
dftracer/logger/: __init__.py  ai.py  logger.py
dftracer/python/: __init__.py  ai.py  ai_common.py  ai_init.py  common.py  dynamo.py  env.py  logger.py
dftracer/python/dbg/: __init__.py  ai.py  logger.py
dftracer/python/dbg/logger/: ai.py  logger.py
dftracer/python/logger/: ai.py  ai_common.py  ai_init.py  common.py  logger.py
dftracer_noop/dbg/logger/: __init__.py
dftracer_noop/logger/: ai.py  logger.py
docs/: README.md  requirements.txt
docs/source/: ai_ml_guide.rst  conf.py  developers.rst  dynamo_guide.rst  examples.rst  index.rst  installation.rst  quickstart.rst  type_safety.rst
docs/source/api/: ai.rst  core.rst  dynamo.rst  env.rst  index.rst
python/dftracer/python/: __init__.py  ai.py  ai_common.py  ai_init.py  common.py  dynamo.py  env.py  logger.py
python/dftracer/python/dbg/: __init__.py  ai.py  logger.py
python/dftracer/python/dbg/torch/: profiler.py
python/dftracer/python/torch/: __init__.py  common.py  profiler.py
tests/: __init__.py  test_ai_logging.py  test_coverage_improvements.py  test_dftracer.py  test_dftracer_noop.py  test_dynamo.py  test_general.py  test_parallel_workers.py  test_pytorch_profiler.py  utils.py
tests/poc/pytorch_profiler/: .gitignore  requirements.txt  test.py
